--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jamesfleeting.github.com by jamesfleeting</title>
+    <title>jamesfleeting.github.com by jamesfleeting</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,8 +17,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Jamesfleeting.github.com</h1>
-        <p>The projects of James Fleeting. http://iwasasuperhero.com</p>
+        <h1>jamesfleeting.github.com</h1>
+        <p>The projects of James Fleeting.</p>
         <p class="view"><a href="https://github.com/jamesfleeting">View the Project on GitHub <small>jamesfleeting</small></a></p>
         <ul>
           <li class="single"><a href="">View On <strong>GitHub</strong></a></li>
