Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>jamesfleeting.github.com by jamesfleeting</title>
+    <title>jamesfleeting @ github by jamesfleeting</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>jamesfleeting.github.com</h1>
+        <h1>jamesfleeting @ github</h1>
         <p>The projects of James Fleeting.</p>
         <p class="view"><a href="https://github.com/jamesfleeting">View the Project on GitHub <small>jamesfleeting</small></a></p>
         <ul>
