--- a/index.html
+++ b/index.html
@@ -3,34 +3,42 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>jamesfleeting @ github by jamesfleeting</title>
-
+    <title>fleeting @ github by fleeting</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/fleeting">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1>jamesfleeting @ github</h1>
-        <p>The projects of James Fleeting.</p>
-        <p class="view"><a href="https://github.com/jamesfleeting">View the Project on GitHub <small>jamesfleeting</small></a></p>
-        <ul>
-          <li class="single"><a href="">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
+
       <section>
-        <p>Nothing here right now. Check out <a href="http://github.com/jamesfleeting">http://github.com/jamesfleeting</a> or <a href="http://iwasasuperhero.com">http://iwasasuperhero.com</a> for more.</p>
+        <div id="title">
+          <h1>fleeting @ github</h1>
+          <p>The projects of James Fleeting.</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/fleeting">fleeting</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
+        </div>
+
+        <p>Nothing here right now. Check out <a href="http://github.com/fleeting">http://github.com/fleeting</a> or <a href="http://iwasasuperhero.com">http://iwasasuperhero.com</a> for more.</p>
       </section>
+
     </div>
-    <footer>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
